# zp6

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  zp6_debug.cap
.run/: Debug.run.xml
ZeroPoint6/: CMakeLists.txt  compile.bat
ZeroPoint6/Assets/ShaderLibrary/: Attributes.hlsl  Common.hlsl  PackedVaryings.hlsl
ZeroPoint6/Assets/ShaderLibrary/API/: D3D.hlsl
ZeroPoint6/Assets/ShaderLibrary/PackedVaryings/: PackedVaryingsColor.hlsl  PackedVaryingsUV0.hlsl
ZeroPoint6/Assets/ShaderLibrary/Platform/: D3D.hlsl
ZeroPoint6/Assets/Shaders/: Common.slang  DebugColor.shader  Lit.shader
ZeroPoint6/include/Core/: Allocator.h  Atomic.h  CommandLine.h  Common.h  Config.h.in  Data.h  Defines.h  Function.h  Hash.h  Http.h  Job.h  Log.h  Macros.h  Map.h  Math.h  Memory.h  Profiler.h  Properties.h  Queue.h  Set.h  String.h  Threading.h  Types.h  Vector.h  Version.h.in
ZeroPoint6/include/Engine/: ApplicationEntryPoint.h  AssetSystem.h  BaseComponentSystem.h  Component.h  ComponentSignature.h  Engine.h  EngineEntryPointAPI.h  EnginePipeline.h  Entity.h  EntityComponentManager.h  EntityQuery.h  EntryPoint.h  ExecutionGraph.h  JobSystem.h  MemoryLabels.h  ModuleEntryPointAPI.h  Subsystem.h  TransformComponent.h
ZeroPoint6/include/EntryPoint/: EntryPoint.h
ZeroPoint6/include/Platform/: Platform.h
ZeroPoint6/include/Rendering/: BatchModeRenderer.h  Camera.h  GraphicsBuffer.h  GraphicsCommandBuffer.h  GraphicsDefines.h  GraphicsDevice.h  GraphicsResource.h  GraphicsTypes.h  ImmediateModeRenderer.h  Material.h  RenderGraph.h  RenderPass.h  RenderPipeline.h  RenderSystem.h  RenderTarget.h  RenderingEngine.h  Sampler.h  Shader.h  Swapchain.h  Texture.h
ZeroPoint6/include/Rendering/Vulkan/: VulkanGraphicsDevice.h
ZeroPoint6/include/Test/: Test.h
ZeroPoint6/include/Tools/: AssetCompiler.h  ShaderCompiler.h
ZeroPoint6/modules/Core/: Core-Printf.ixx  Core-Rect.ixx  Core-Types.ixx  Core-Vector2.ixx  Core.ixx
ZeroPoint6/modules/Platform/: Platform.ixx
ZeroPoint6/res/Windows/: resource.rc
ZeroPoint6/src/Core/: Allocator.cpp  CommandLine.cpp  Common.cpp  Data.cpp  Http.cpp  Job.cpp  Log.cpp  Math.cpp  Profiler.cpp  Properties.cpp  String.cpp  Threading.cpp
ZeroPoint6/src/Engine/: AssetSystem.cpp  Component.cpp  Engine.cpp  Entity.cpp  EntityComponentManager.cpp  EntityQuery.cpp  ExecutionGraph.cpp  JobSystem.cpp  Subsystem.cpp
ZeroPoint6/src/Engine/Windows/: MainWindows.cpp  WindowsMain.cpp
ZeroPoint6/src/Platform/: Platform-Windows.cpp
ZeroPoint6/src/Platform/Windows/: PlatformWindows.cpp  WindowsMain.cpp  WindowsPlatform.cpp
ZeroPoint6/src/Rendering/: BatchModeRenderer.cpp  GraphicsCommandBuffer.cpp  GraphicsDevice.cpp  GraphicsResource.cpp  GraphicsTypes.cpp  ImmediateModeRenderer.cpp  RenderGraph.cpp  RenderSystem.cpp  Texture.cpp
ZeroPoint6/src/Rendering/Vulkan/: VulkanGraphicsDevice.cpp  VulkanRenderingEngine.cpp  VulkanShader.cpp
ZeroPoint6/src/Test/: Test.cpp
ZeroPoint6/src/Tools/: AssetCompiler.cpp  ShaderCompiler.cpp
ZeroPoint6/src/Tools/Windows/: AssetCompilerWindowsMain.cpp  ShaderCompilerWindows.cpp
